# StoChemSim

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CRNSimulator.m  InputFileDocumentation.txt  InputVerifier.cpp  InputVerifier.h  LICENSE  README.md  StoChemSim.wl  algorithm.cpp  dependency.h  faulty_sample_input_SSA_file_1.txt  faulty_sample_input_SSA_file_2.txt  faulty_sample_input_SSA_file_3.txt  main.cpp  sample_input_SSA_file.txt  setup.nb  setupCRNSSA.nb  ssa_algo.cpp  tree.cpp
CPU/: InputVerifier.h  algorithm.cpp  algorithm.h  decoder.cpp  decoder.h  dependency.cpp  dependency.h  dependencyGraph.h  directMethodSSA.cpp  directMethodSSA.h  faulty_sample_input_SSA_file_1.txt  faulty_sample_input_SSA_file_3.txt  faulty_sample_input_SSA_file_4.txt  faulty_sample_input_SSA_file_5.txt  inputVerifier.cpp  inputVerifier.h  main.cpp  reactionTree.cpp  reactionTree.h  sample_deterministic_input_file_3.txt  sample_deterministic_input_file_4.txt  sample_input_SSA_file.txt  tree.cpp  tree.h
CPU/SampleInputs/: faulty_sample_input_SSA_file_1.txt  faulty_sample_input_SSA_file_2.txt  faulty_sample_input_SSA_file_3.txt  input.txt  sample_deterministic_input_file_1.txt  sample_deterministic_input_file_2.txt  sample_deterministic_input_file_3.txt  sample_deterministic_input_file_4.txt  sample_input_SSA_file.txt
GPU/Parsing/: GPUInputParser.cpp
GPU/input/: CRN.txt
GPU/output/: generatedCRN.txt
StoChemSimParallel/: .gitignore  ArgParser.cpp  ArgParser.h  CMakeLists.txt  cudaUtils.cpp  cudaUtils.h  inputParser.cpp  inputParser.h  kernels.cu  testfuncs.cu  testfuncs.cuh  utils.h
StoChemSimParallel/common/: gpuDecoder.cpp
StoChemSimParallel/directMethodSSA/: Main.cpp  kernels.cu  utils.h
StoChemSimParallel/in/: small_crn.txt
StoChemSimParallel/inputs/: sample_GPU_input_SSA_file.txt
StoChemSimSequential/: CMakeLists.txt  driverBTL.cpp  driverSSA.cpp  interface.cpp
StoChemSimSequential/boundedTauLeaping/: CMakeLists.txt  boundedTauLeaping.cpp  boundedTauLeaping.h
StoChemSimSequential/common/: CMakeLists.txt  decoder.h  inputVerifier.cpp
StoChemSimSequential/directMethodSSA/: CMakeLists.txt  dependencyGraph.cpp  directMethodSSA.cpp  reactionTree.cpp  reactionTree.h
StoChemSimSequential/inputs/: btl_max.txt  faulty_sample_input_SSA_file_4.txt  large_crn.txt  output_btl_max.txt  sample_deterministic_input_file_1.txt  sample_deterministic_input_file_3.txt  sample_deterministic_input_file_4.txt
WolframNotebooks/demo/: sudoku.nb  winfreeSudoku.nb
WolframNotebooks/testing/: testCases.nb  testRuntime.nb
gpu_code/: GPUInputGenerator.cpp  GPUInputGenerator.h  GPUInputParser.cpp  GPUInputParser.h  Main.cpp  main.cpp
gpu_code/input/: CRN.txt
interface/: interface-aio.cpp  interface.cpp
interface/test/: CRNSSADependency.nb  interface_test.nb  test.cpp
parallel/: 464R_GPU_SSA.sln  CMakeLists.txt  DirectMethod.cu  DirectMethod.cuh  Main.cpp  README.md  banner_logo.txt  inputParser.cpp  kernels.cuh  main.cpp  utils.h
parallel/464R_GPU_SSA/: 464R_GPU_SSA.vcxproj  464R_GPU_SSA.vcxproj.filters  DirectMethod.cu  inputParser.cpp  inputParser.h
parallel/Parsing/: GPUInputGenerator.cpp  gpuDecoder.cpp  gpuDecoder.h
parallel/common/: gpuDecoder.cpp  gpuDecoder.h
parallel/directMethodSSA/: utils.cpp
parallel/in/: medium_crn.txt
parallel/inputs/: large_crn.txt
parallel/interface/: interface.cpp
parallel/scripts/: convert.py
sequential/: SSABoost.sln  SSABoost.vcxproj  SSABoost.vcxproj.filters  driverBTL.cpp  driverSSA.cpp  main.cpp  output.txt
sequential/Debug/: SSABoost.exe.recipe  SSABoost.ilk  SSABoost.vcxproj.FileListAbsolute.txt
sequential/boundedTauLeaping/: boundedTauLeaping.cpp  boundedTauLeaping.h
sequential/common/: boundedTauLeaping.h  decoder.h  (+6 more)
soloveichik_pkg/: CRNSimulator.m  CRNSimulatorExtensions.m  CRNSimulatorSSA.m  Examples.nb  ExamplesSSA.nb
wolfram/: CRNSSA.wl  StoChemSim.wl  bigTestCRNSSA.nb  demoCRNSSA.nb  runtimeResults.mx  setupCRNSSA.nb  testCases.nb  testRuntime.nb  testRuntimeLong.nb  testRuntimeWithNaive.nb
wolfram_frontend/: CRNSSA.wl  demoCRNSSA.nb  testCRNSSA.nb  testCases.nb  testRuntime.nb
(+55 files in other folders)
